Change some words on home page

--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
 
     <p>I am currently a M.S. student majoring in Biostatistics and Data Science at Weill Cornell Medicine.</p>
 
-<p>My interests lay in Data Science and I love dealing with data, especially investigating the intrinsic connection between variables by data wragling with dplyr and data visualization with the help of ggplot2. I have some hands on experience analyzing complex datasets using these packages and am looking foward to make more progress in the future!</p>
+<p>My interests lie in Data Science and I love dealing with data, especially investigating the intrinsic connection between variables by data wrangling with dplyr and data visualization with the help of ggplot2. I have some hands-on experience analyzing complex datasets using these packages and am looking forward to making more progress in the future!</p>
 
 
     <div class="row">
@@ -581,7 +581,7 @@
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
               <p class="course">M.S. in Biostatistics and Data Science, 2019 - now</p>
-              <p class="institution">Weill Cronell Medicine</p>
+              <p class="institution">Weill Cornell Medicine</p>
             </div>
           </li>
           
@@ -974,7 +974,7 @@
 <div class="row">
   <div class="col-12 col-lg-4 section-heading">
     <h1>Recent Posts</h1>
-    <p>No men&rsquo;s desire for knowledge is satisfied in this life.</p>
+    <p>No one&rsquo;s desire for knowledge is satisfied in this life.</p>
   </div>
   <div class="col-12 col-lg-8">
 
