--- a/project/ffd/index.html
+++ b/project/ffd/index.html
@@ -477,7 +477,7 @@
   <div class="article-container">
 
     <div class="article-style">
-      <p>Apply the algorithm about 3D Free Form Deformation (FFD) with the toolkit VTK. Plus, utilizing the 3D Face Resruction model PRNet, we realize the workflow of 2D-Face -&gt; 3D-Face -&gt; 3D-FFD. It&rsquo;s a course project about visualization, working with Jing Wang and Donghao Li. The report can be found <a href="../pj_report.pdf">here</a></p>
+      <p>Apply the algorithm about 3D Free Form Deformation (FFD) with the toolkit VTK. Plus, utilizing the 3D Face Resruction model PRNet, we realize the workflow of 2D-Face -&gt; 3D-Face -&gt; 3D-FFD. It&rsquo;s a course project about visualization, working with Jing Wang and Donghao Li. The report can be found <a href="pj_report.pdf" target="_blank">here</a>(In Chinese)</p>
 
     </div>
 
