--- a/project/poster/index.html
+++ b/project/poster/index.html
@@ -469,7 +469,7 @@
 
 <div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 540px;">
   <div style="position: relative">
-    <img src="/project/poster/1featured_hu92456580e56fddf4f3c592621d13c105_4260202_720x0_resize_q90_lanczos.jpg" alt="" class="featured-image">
+    <embed src="/project/poster/Poster_Tiranran.pdf" width="720px" height="540px" alt="" class="featured-image">
     
   </div>
 </div>
