--- a/project/poster/index.html
+++ b/project/poster/index.html
@@ -469,7 +469,7 @@
 
 <div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 540px;">
   <div style="position: relative">
-    <embed src="/project/poster/Poster_Tiranran.pdf" width="720px" height="540px" alt="" class="featured-image">
+    <embed src="/project/poster/Poster_Tianran.pdf" width="720px" height="540px" alt="Poster">
     
   </div>
 </div>
