Updated "About me"

--- a/404.html
+++ b/404.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="First Year Graduate Student">
+  <meta name="description" content="New Graduate actively seeking for Data Analyst/Scientist positions">
 
   
   <link rel="alternate" hreflang="en-us" href="/404.html">
@@ -115,7 +115,7 @@
   <meta property="og:site_name" content="Tianran Zhang">
   <meta property="og:url" content="/404.html">
   <meta property="og:title" content="404 Page not found | Tianran Zhang">
-  <meta property="og:description" content="First Year Graduate Student"><meta property="og:image" content="/img/icon-192.png">
+  <meta property="og:description" content="New Graduate actively seeking for Data Analyst/Scientist positions"><meta property="og:image" content="/img/icon-192.png">
   <meta property="twitter:image" content="/img/icon-192.png"><meta property="og:locale" content="en-us">
   
     
