--- a/publication_types/index.html
+++ b/publication_types/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="First Year Graduate Student">
+  <meta name="description" content="New Graduate actively seeking for Data Analyst/Scientist positions">
 
   
   <link rel="alternate" hreflang="en-us" href="/publication_types/">
@@ -117,7 +117,7 @@
   <meta property="og:site_name" content="Tianran Zhang">
   <meta property="og:url" content="/publication_types/">
   <meta property="og:title" content="Publication_types | Tianran Zhang">
-  <meta property="og:description" content="First Year Graduate Student"><meta property="og:image" content="/img/icon-192.png">
+  <meta property="og:description" content="New Graduate actively seeking for Data Analyst/Scientist positions"><meta property="og:image" content="/img/icon-192.png">
   <meta property="twitter:image" content="/img/icon-192.png"><meta property="og:locale" content="en-us">
   
     
